Error handling patch