@@ -3,12 +3,10 @@ package com.natwest.currency.configuration;
 import com.natwest.currency.data.WalletStore;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
-import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.event.EventListener;
-import org.springframework.validation.beanvalidation.MethodValidationPostProcessor;
 
-import java.util.List;
+import java.util.Arrays;
 
 @Configuration
 public class ApplicationConfig {
@@ -18,11 +16,7 @@ public class ApplicationConfig {
 
     @EventListener(ApplicationReadyEvent.class)
     public void loadWallet() {
-        walletStore.setCurrencyNotesList(List.of(1, 50, 5, 5, 10, 1, 20, 20, 20, 5, 1, 50));
+        walletStore.setCurrencyNotesList(Arrays.asList(1, 50, 5, 5, 10, 1, 20, 20, 20, 5, 1, 50));
     }
 
-    @Bean
-    public MethodValidationPostProcessor methodValidationPostProcessor() {
-        return new MethodValidationPostProcessor();
-    }
 }
